Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
+    "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Nồm ẩm ảnh hưởng như thế nào đến sức khỏe tim mạch?",
+    "answers": [
+      {
+        "text": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim.",
+        "correct": true
+      },
+      {
+        "text": "Nồm ẩm giúp cải thiện sức khỏe tim mạch.",
+        "correct": false
+      },
+      {
+        "text": "Nồm ẩm không có ảnh hưởng gì đến tim mạch.",
+        "correct": false
+      },
+      {
+        "text": "Nồm ẩm làm cho tim hoạt động bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cựu Tổng thống Philippines Duterte bị giam giữ ở Hà Lan",
     "content": "Cựu Tổng thống Philippines, Rodrigo Duterte, đã bị giam giữ ở Hà Lan theo lệnh của Tòa án Hình sự Quốc tế (ICC) để chờ xét xử liên quan đến chiến dịch chống ma túy gây tranh cãi của ông. Ông đã bị bắt giữ theo lệnh của ICC khi vừa trở về từ Hong Kong và được đưa đến nhà tù ở The Hague. ICC cáo buộc ông Duterte có tội ác chống lại loài người trong các hoạt động chống ma túy, trong đó có việc thành lập các đội tử thần thực hiện các vụ xử án ngoài pháp luật.",
     "link": "https://dantri.com.vn/the-gioi/cuu-tong-thong-philippines-duterte-bi-giam-giu-o-ha-lan-20250313072144871.htm",
@@ -606,6 +664,33 @@
     ]
   },
   {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -632,33 +717,6 @@
       },
       {
         "text": "150 ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -2379,6 +2437,33 @@
     ]
   },
   {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Rau củ quả nào tốt cho não?",
     "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
     "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
@@ -2432,33 +2517,6 @@
       },
       {
         "text": "12.000 ôtô điện",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
-    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
-    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
-    "answers": [
-      {
-        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
-        "correct": true
-      },
-      {
-        "text": "Cà chua, khoai tây, bí ngô",
-        "correct": false
-      },
-      {
-        "text": "Nho, chuối, xoài, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
@@ -3558,33 +3616,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -3607,6 +3638,33 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -3778,6 +3836,33 @@
     ]
   },
   {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -3804,33 +3889,6 @@
       },
       {
         "text": "Đau bụng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
