Update generated content

--- a/home.html
+++ b/home.html
@@ -175,6 +175,37 @@
     ]
   },
   {
+    "title": "Ukraine đặt mục tiêu sản xuất 4,5 triệu UAV: Cuộc đua sống còn với Nga",
+    "content": "Ukraine đang đặt mục tiêu sản xuất 4,5 triệu UAV vào năm 2025 nhằm đối phó với quân đội Nga, vốn đang có ưu thế hơn về số lượng và công nghệ. Tổng thống Volodymyr Zelensky khẳng định Ukraine hiện là quốc gia dẫn đầu trong chiến tranh UAV. Sự phát triển này không chỉ nhằm tự vệ mà còn giúp Ukraine giảm bớt phụ thuộc vào viện trợ quân sự từ các đồng minh như Mỹ. Việc sản xuất UAV trở thành chiến lược sống còn trong bối cảnh chiến sự leo thang.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-dat-muc-tieu-san-xuat-45-trieu-uav-cuoc-dua-song-con-voi-nga-20250313080649498.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Ukraine đang có kế hoạch sản xuất bao nhiêu UAV vào năm 2025?",
+    "answers": [
+      {
+        "text": "4,5 triệu",
+        "correct": true
+      },
+      {
+        "text": "3 triệu",
+        "correct": false
+      },
+      {
+        "text": "1 triệu",
+        "correct": false
+      },
+      {
+        "text": "2 triệu",
+        "correct": false
+      },
+      {
+        "text": "5 triệu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khởi nghiệp kinh doanh online, phải tận dụng công nghệ",
     "content": "Bài viết nhấn mạnh tầm quan trọng của việc tận dụng công nghệ trong khởi nghiệp kinh doanh online, đặc biệt trong bối cảnh thương mại điện tử đang phát triển mạnh mẽ. Doanh nghiệp cần xây dựng kênh bán hàng online thông qua website và mạng xã hội, đồng thời áp dụng các công cụ tự động hóa để tối ưu hóa quy trình quản lý và marketing. Việc đa dạng hóa hình thức thanh toán và dịch vụ giao hàng cũng sẽ giúp tăng cường sự hài lòng và trung thành của khách hàng.",
     "link": "https://tuoitre.vn/khoi-nghiep-kinh-doanh-online-phai-tan-dung-cong-nghe-20250313014211383.htm",
@@ -251,6 +282,37 @@
       },
       {
         "text": "50 tỉ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Định giá Fadil 2020?",
+    "content": "Bài viết đề cập đến việc định giá xe Fadil 2020 đã qua sử dụng, cụ thể là một chiếc xe chạy khoảng 50.000 km, được nữ chủ sở hữu sử dụng. Người hỏi, Thanh Mai, muốn biết mức giá hợp lý cho chiếc xe này. Thông tin chi tiết về tình trạng và lịch sử sử dụng của xe sẽ ảnh hưởng đến giá trị định giá cuối cùng.",
+    "link": "https://vnexpress.net/dinh-gia-fadil-2020-4860672.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Giá trị hợp lý của xe Fadil 2020 đã qua sử dụng là bao nhiêu?",
+    "answers": [
+      {
+        "text": "Khoảng 400 triệu đồng",
+        "correct": true
+      },
+      {
+        "text": "Khoảng 500 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 300 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 600 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 700 triệu đồng",
         "correct": false
       }
     ]
@@ -3490,33 +3552,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
     "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
     "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
@@ -3539,6 +3574,33 @@
       },
       {
         "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
